# onetl

./: .env.local  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .spdx-license-header.txt  CONTRIBUTING.rst  Makefile  README.rst  SECURITY.rst  docker-compose.yml  pyproject.toml  pytest_runner.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: automerge.yml  cache-cleanup.yml  changelog.yml  codeql-analysis.yml  dev-release.yml  get-matrix.yml  release.yml  repo-labels-sync.yml  test-clickhouse.yml  test-core.yml  test-ftp.yml  test-ftps.yml  test-greenplum.yml  test-hdfs.yml  test-hive-and-iceberg.yml  test-kafka.yml  test-local-fs.yml  test-mongodb.yml  test-mssql.yml  test-mysql.yml  test-oracle.yml  test-postgres.yml  test-s3.yml  test-samba.yml  test-sftp.yml  test-webdav.yml  tests.yml
docker/: Dockerfile
docs/: conf.py
docs/changelog/: 0.12.1.rst  0.12.2.rst  0.13.0.rst  0.13.3.rst  0.15.0.rst  0.15.1.rst  index.rst
docs/changelog/next_release/: +.breaking.1.rst  +.dependency.rst  +.feature.1.rst  +.feature.2.rst  +.feature.3.rst  +.feature.4.rst  476.feature.rst  479.feature.rst
docs/troubleshooting/: index.rst
mddocs/: mkdocs.yml
mddocs/docs/: concepts.md  contributing.md  include_0.md  index.md  logging.md  nav.md  plugins.md  quickstart.md  security.md  snippet_0.md
mddocs/docs/changelog/: 0.10.0.md  0.10.1.md  0.10.2.md  0.11.0.md  0.11.1.md  0.11.2.md  0.12.0.md  0.12.1.md  0.12.2.md  0.12.3.md  0.12.4.md  0.12.5.md  0.13.0.md  0.13.1.md  0.13.3.md  0.13.4.md  0.13.5.md  0.14.0.md  0.14.1.md  0.15.0.md  0.15.1.md  0.16.0.md  0.16.1.md  0.7.0.md  0.7.1.md  0.7.2.md  0.8.0.md  0.8.1.md  0.9.0.md  0.9.1.md  0.9.2.md  0.9.3.md  0.9.4.md  0.9.5.md  NEXT_RELEASE.md  index.md
mddocs/docs/connection/: index.md
mddocs/docs/db/: index.md  reader.md  writer.md
mddocs/docs/file/: index.md
mddocs/docs/file_df/: index.md
mddocs/docs/hooks/: design.md  global_state.md  hook.md  index.md  slot.md  support_hooks.md
mddocs/docs/hwm_store/: index.md  yaml_hwm_store.md
mddocs/docs/install/: files.md  full.md  index.md  kerberos.md  minimal.md  spark.md
mddocs/docs/strategy/: incremental_batch_strategy.md  incremental_strategy.md  index.md  snapshot_batch_strategy.md  snapshot_strategy.md
mddocs/docs/troubleshooting/: index.md  spark.md
mddocs/scripts/: fix_refs.py  generate_anchors.py  griffe_expand_refs.py  links2anchors.py  rst2md.py
mddocs/strategy/: incremental_batch_strategy.md  incremental_strategy.md  snapshot_batch_strategy.md  snapshot_strategy.md
onetl/: __init__.py  exception.py  log.py  version.py
onetl/_metrics/: __init__.py  command.py  driver.py  executor.py  extract.py  input.py  output.py  recorder.py
onetl/_metrics/listener/: __init__.py  base.py  execution.py  job.py  listener.py  stage.py  task.py
onetl/_util/: alias.py  classproperty.py  file.py  hadoop.py  java.py  scala.py  spark.py  sql.py  version.py
onetl/base/: __init__.py  base_connection.py  base_db_connection.py  base_file_connection.py  base_file_df_connection.py  base_file_filter.py  base_file_format.py  base_file_limit.py  contains_exception.py  contains_get_df_schema.py  contains_get_min_max_values.py  path_protocol.py  path_stat_protocol.py  pure_path_protocol.py  supports_rename_dir.py
onetl/connection/: __init__.py  kerberos_helpers.py
onetl/connection/file_connection/: file_connection.py  ftp.py  ftps.py  s3.py  samba.py  sftp.py  webdav.py
onetl/connection/file_df_connection/: spark_file_df_connection.py  spark_local_fs.py
onetl/core/: __init__.py
onetl/core/file_filter/: __init__.py  file_filter.py
onetl/core/file_limit/: __init__.py  file_limit.py
onetl/db/: __init__.py
onetl/db/db_reader/: __init__.py  db_reader.py
onetl/db/db_writer/: __init__.py  db_writer.py
onetl/file/: __init__.py  file_result.py  file_set.py
onetl/file/file_df_reader/: __init__.py  file_df_reader.py  options.py
onetl/file/file_df_writer/: __init__.py  file_df_writer.py  options.py
onetl/file/file_downloader/: __init__.py  file_downloader.py  options.py  result.py
onetl/file/file_mover/: __init__.py  file_mover.py  options.py  result.py
onetl/file/file_uploader/: __init__.py  file_uploader.py  options.py  result.py
onetl/file/filter/: __init__.py  exclude_dir.py  file_hwm.py  file_mtime.py  file_size.py  glob.py  match_all_filters.py  regexp.py
onetl/file/format/: __init__.py  avro.py  csv.py  excel.py  file_format.py  json.py  jsonline.py  orc.py  parquet.py  xml.py
onetl/file/limit/: __init__.py  limits_reached.py  limits_stop_at.py  max_files_count.py  reset_limits.py  total_files_size.py
onetl/hooks/: __init__.py  hook.py  hook_collection.py  hooks_state.py  method_inheritance_stack.py  slot.py  support_hooks.py
onetl/hwm/: __init__.py  auto_hwm.py  window.py
onetl/hwm/store/: __init__.py  hwm_class_registry.py  yaml_hwm_store.py
onetl/impl/: __init__.py  base_model.py  failed_local_file.py  file_exist_behavior.py  frozen_model.py  generic_options.py  local_path.py  path_container.py  path_repr.py  remote_directory.py  remote_file.py  remote_path.py  remote_path_stat.py
onetl/plugins/: __init__.py  import_plugins.py
onetl/strategy/: __init__.py  base_strategy.py  batch_hwm_strategy.py  hwm_strategy.py  incremental_strategy.py  snapshot_strategy.py  strategy_manager.py
onetl/strategy/hwm_store/: __init__.py
tests/: ivysettings.xml
tests/fixtures/: create_keytab.py  global_hwm_store.py  spark.py
tests/fixtures/connections/: file_connections.py  ftp.py  ftps.py  hdfs.py  local_fs.py  s3.py  samba.py  sftp.py  webdav.py
tests/fixtures/processing/: base_processing.py  clickhouse.py  hive.py  iceberg.py  kafka.py  mongodb.py  mssql.py  mysql.py  oracle.py  postgres.py
tests/libs/failing/: failing.py
tests/resources/file_df_connection/: generate_files.py
tests/tests_integration/: tests_hwm_store_integration.py
tests/tests_unit/: test_impl_unit.py
tests/tests_unit/test_file/: test_file_df_writer_unit.py  (+5 more)
tests/util/: assert_df.py  rand.py  to_pandas.py  upload_files.py
(+447 files in other folders)
